--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384–1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs72" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css"/>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -36,10 +37,17 @@
 
 <!-- Main container -->
 <div class="container-fluid">
-    <div class="row" id="Main">
+
+    <div class="hero">
+        <h1>Fashion</h1>
+        <img class="img-responsive" src="http://e.fastcompany.net/multisite_files/fastcompany/imagecache/1280/poster/2014/04/3028600-poster-p-fashion.jpg"/>
+        <div class="bar"></div>
+    </div>
+
+    <!--div class="row" id="Main">
         <h2>Main</h2>
         <img class="img-responsive" src="http://images.clipartpanda.com/fashion-clip-art-11949852761236337683silouettedonnavestiti.svg.med.png"/>
-    </div>
+    </div-->
 
     <div class="row" id="Persona">
         <h2>Persona</h2>
@@ -56,7 +64,7 @@
             libero nisl et sem. Proin interdum maecenas massa turpis sagittis in, interdum non lobortis vitae massa.
             Quisque purus lectus, posuere eget imperdiet nec sodales id arcu. Vestibulum elit pede dictum eu, viverra
             non tincidunt eu ligula.</p>
-        <img class="img-responsive" src="http://e.fastcompany.net/multisite_files/fastcompany/imagecache/1280/poster/2014/04/3028600-poster-p-fashion.jpg"/>
+        <img class="img-responsive" src="http://media4.popsugar-assets.com/files/2014/02/23/136/n/1922564/a78146119216adfc_MilanStreet5_FW14_037.JPG.xxxlarge_2x/i/MFW-Street-Style-Day-Five.jpg">
     </div>
 
     <div class="row">
