--- a/index.html
+++ b/index.html
@@ -36,34 +36,41 @@
 </nav>
 
 <!-- Main container -->
-<div class="container-fluid">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+
+<div class="container-fluid nolap">
     <div class="hero">
         <h1>Fashion</h1>
         <img class="img-responsive" src="http://e.fastcompany.net/multisite_files/fastcompany/imagecache/1280/poster/2014/04/3028600-poster-p-fashion.jpg"/>
         <div class="bar"></div>
     </div>
+</div>
 
     <!--div class="row" id="Main">
         <h2>Main</h2>
         <img class="img-responsive" src="http://images.clipartpanda.com/fashion-clip-art-11949852761236337683silouettedonnavestiti.svg.med.png"/>
     </div-->
-
+<div class="container-fluid">
     <div class="row" id="Persona">
-        <h2>Persona</h2>
+        <div class="nolap">
+            <h2>Persona</h2>
 
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed posuere interdum sem. Quisque ligula eros
-            ullamcorper quis, lacinia quis facilisis sed sapien. Mauris varius diam vitae arcu. Sed arcu lectus auctor
-            vitae, consectetuer et venenatis eget velit. Sed augue orci, lacinia eu tincidunt et eleifend nec lacus.
-            Donec ultricies nisl ut felis, suspendisse potenti. Lorem ipsum ligula ut hendrerit mollis, ipsum erat
-            vehicula risus, eu suscipit sem libero nec erat. Aliquam erat volutpat. Sed congue augue vitae neque. Nulla
-            consectetuer porttitor pede. Fusce purus morbi tortor magna condimentum vel, placerat id blandit sit amet
-            tortor.
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed posuere interdum sem. Quisque ligula eros
+                ullamcorper quis, lacinia quis facilisis sed sapien. Mauris varius diam vitae arcu. Sed arcu lectus auctor
+                vitae, consectetuer et venenatis eget velit. Sed augue orci, lacinia eu tincidunt et eleifend nec lacus.
+                Donec ultricies nisl ut felis, suspendisse potenti. Lorem ipsum ligula ut hendrerit mollis, ipsum erat
+                vehicula risus, eu suscipit sem libero nec erat. Aliquam erat volutpat. Sed congue augue vitae neque. Nulla
+                consectetuer porttitor pede. Fusce purus morbi tortor magna condimentum vel, placerat id blandit sit amet
+                tortor.
 
-            Mauris sed libero. Suspendisse facilisis nulla in lacinia laoreet, lorem velit accumsan velit vel mattis
-            libero nisl et sem. Proin interdum maecenas massa turpis sagittis in, interdum non lobortis vitae massa.
-            Quisque purus lectus, posuere eget imperdiet nec sodales id arcu. Vestibulum elit pede dictum eu, viverra
-            non tincidunt eu ligula.</p>
+                Mauris sed libero. Suspendisse facilisis nulla in lacinia laoreet, lorem velit accumsan velit vel mattis
+                libero nisl et sem. Proin interdum maecenas massa turpis sagittis in, interdum non lobortis vitae massa.
+                Quisque purus lectus, posuere eget imperdiet nec sodales id arcu. Vestibulum elit pede dictum eu, viverra
+                non tincidunt eu ligula.</p>
+        </div>
         <img class="img-responsive" src="http://media4.popsugar-assets.com/files/2014/02/23/136/n/1922564/a78146119216adfc_MilanStreet5_FW14_037.JPG.xxxlarge_2x/i/MFW-Street-Style-Day-Five.jpg">
     </div>
 
@@ -74,30 +81,27 @@
     </div>
 
     <div class="row">
-            <div class="col-md-6">
-                <img class="img-responsive" src="http://hbz.h-cdn.co/assets/cm/15/11/55024c5028b0b_-_hbz-mfw-ss2015-street-style-day5-16.jpg">
-            </div>
-            <div class="col-md-6">
-                <img class="img-responsive" src="http://cdn1-www.thefashionspot.com/assets/uploads/gallery/street-style-coat-trends-fall-2013/milan-streetstyle-fall-2013_red2.jpg">
-            </div>
+        <div class="col-md-6">
+            <img class="img-responsive" src="http://hbz.h-cdn.co/assets/cm/15/11/55024c5028b0b_-_hbz-mfw-ss2015-street-style-day5-16.jpg">
+        </div>
+        <div class="col-md-6">
+            <img class="img-responsive" src="http://cdn1-www.thefashionspot.com/assets/uploads/gallery/street-style-coat-trends-fall-2013/milan-streetstyle-fall-2013_red2.jpg">
+        </div>
     </div>
 
     <div class="row">
-            <div class="col-md-4">
-                <img class="img-responsive" src="http://media.vogue.com/r/c_1,h_4000,w_3280/2015/10/26/fashion-week-russia-spring-2016-street-style-09.jpg">
-            </div>
-            <div class="col-md-4">
-                <img class="img-responsive" src="http://media3.popsugar-assets.com/files/2014/02/08/675/n/1922564/90490e6bb039f950_467796521_10.jpg.xxxlarge_2x/i/NYFW-Street-Style-Day-2.jpg">
-            </div>
-            <div class="col-md-4">
-                <img class="img-responsive" src="http://media4.popsugar-assets.com/files/2014/02/23/136/n/1922564/a78146119216adfc_MilanStreet5_FW14_037.JPG.xxxlarge_2x/i/MFW-Street-Style-Day-Five.jpg">
-            </div>
+        <div class="col-md-4">
+            <img class="img-responsive" src="http://media.vogue.com/r/c_1,h_4000,w_3280/2015/10/26/fashion-week-russia-spring-2016-street-style-09.jpg">
+        </div>
+        <div class="col-md-4">
+            <img class="img-responsive" src="http://media3.popsugar-assets.com/files/2014/02/08/675/n/1922564/90490e6bb039f950_467796521_10.jpg.xxxlarge_2x/i/NYFW-Street-Style-Day-2.jpg">
+        </div>
+        <div class="col-md-4">
+            <img class="img-responsive" src="http://media4.popsugar-assets.com/files/2014/02/23/136/n/1922564/a78146119216adfc_MilanStreet5_FW14_037.JPG.xxxlarge_2x/i/MFW-Street-Style-Day-Five.jpg">
+        </div>
     </div>
-    </div>
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Latest compiled and minified JavaScript -->
+</div>
+<!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
             integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
             crossorigin="anonymous"></script>
